--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "solo-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.jsx",
+  "main": "index.tsx",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot && nodemon server/server.ts",
-    "dev": "concurrently \"webpack-dev-server --mode development --open --hot\" \"nodemon server/server.ts\"",
-    "build": "webpack --mode production"
+    "start": "concurrently \"webpack-dev-server --open --hot \" \"nodemon ./server/server.ts\"",
+    "dev": "concurrently \"webpack-dev-server --open --hot \" \"nodemon ./server/server.ts\"",
+    "build": "webpack --config ./webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
-    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -25,12 +24,14 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.21.0",
     "@types/cors": "^2.8.13",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.22",
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
