docker compose added

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,20 @@
 version: '3.8'
 services:
-  mongodb:
-    image: 'mongo'
-    networks:
-      - mongodbntw
   app:
-    build: ./
+    container_name: analog-log
+    image: analog-log
+    build:
+      context: ./
     ports:
       - '3000:3000'
+    networks:
+      - mongodbntw
+    depends_on:
+      - mongodb
+
+  mongodb:
+    container_name: mongodb
+    image: 'mongo'
     networks:
       - mongodbntw
 networks:
